// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion in collapsible & multiple expanded group mode allows multiple groups to be expanded 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="true"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
    <section
      class="widget-accordion-group"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup1ContentWrapper"
          aria-disabled="false"
          aria-expanded="true"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup1HeaderButton"
          role="button"
          tabindex="0"
        >
          header2
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup1HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup1ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content2
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & multiple expanded group mode applies group collapsed value changes 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & multiple expanded group mode collapses a group 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
    <section
      class="widget-accordion-group"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup1ContentWrapper"
          aria-disabled="false"
          aria-expanded="true"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup1HeaderButton"
          role="button"
          tabindex="0"
        >
          header2
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup1HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup1ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content2
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & multiple expanded group mode expands a group 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="true"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & multiple expanded group mode inits with group initially collapsed settings 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="true"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup2ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup2HeaderButton"
          role="button"
          tabindex="0"
        >
          header3
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup2HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup2ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content3
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & multiple expanded group mode renders correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & single expanded group mode allows one group to be expanded only 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
    <section
      class="widget-accordion-group"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup1ContentWrapper"
          aria-disabled="false"
          aria-expanded="true"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup1HeaderButton"
          role="button"
          tabindex="0"
        >
          header2
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup1HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup1ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content2
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & single expanded group mode collapses a group 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & single expanded group mode expands a group 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & single expanded group mode inits with group initially collapsed settings 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="true"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & single expanded group mode inits with not more than one group expanded 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion in collapsible & single expanded group mode renders correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion not collapsible renders correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="1"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="true"
          aria-expanded="false"
          class="widget-accordion-group-header-button"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Accordion renders correctly without tabindex 1`] = `
<DocumentFragment>
  <div
    class="widget-accordion"
    data-focusindex="0"
    id="id"
    style="height: 500px;"
  >
    <section
      class="widget-accordion-group widget-accordion-group-collapsed"
    >
      <header
        class="widget-accordion-group-header"
      >
        <div
          aria-controls="idAccordionGroup0ContentWrapper"
          aria-disabled="false"
          aria-expanded="false"
          class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
          data-focusindex="0"
          id="idAccordionGroup0HeaderButton"
          role="button"
          tabindex="0"
        >
          header
        </div>
      </header>
      <div
        aria-labelledby="idAccordionGroup0HeaderButton"
        class="widget-accordion-group-content-wrapper"
        data-focusindex="0"
        id="idAccordionGroup0ContentWrapper"
        role="region"
      >
        <div
          class="widget-accordion-group-content"
        >
          <span>
            content
          </span>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
